devops/208-jenkins-pipeline-for-webpage-application(postgresql-nodejs-react)/cw-todo-app/main.tf
terraform {
  required_providers {
    aws = {
        source = "hashicorp/aws"
        version = "~> 4.0"
    }
  }
}

# terraform statefile "tf-backend-jenkins.tfstate" seklinde tutulacak. Bu kismi yazmasak Local de tutardi.
terraform {
  backend "s3" {
    bucket = "pol-208-project-todo-app"
    key = "backend/tf-backend-jenkins.tfstate"
    region = "us-east-1"
  }
}


provider "aws" {
  region = "us-east-1"
}

variable "tags" {
  default = ["postgresql", "nodejs", "react"]
}

variable "user" {
  default = "polat"
}

resource "aws_instance" "managed_nodes" {
    ami = "ami-0f095f89ae15be883"
    count = 3
    instance_type = "t2.micro"
    key_name = "firstkey"
    vpc_security_group_ids = [aws_security_group.tf-sec-gr.id]
    iam_instance_profile = "jenkins-project-profile-${var.user}"
    tags = {
        Name = "ansible_${element(var.tags, count.index )}"
        stack = "ansible_project"
        environment = "development_1"


    }
}

resource "aws_security_group" "tf-sec-gr" {
    name = "project-208-sec-gr"
    tags = {
      "Name" = "project208-sec-gr"
    }

    ingress {
        from_port = 22
        protocol = "tcp"
        to_port = 22
        cidr_blocks = ["0.0.0.0/0"]
    }
    ingress {
        from_port = 5000
        protocol = "tcp"
        to_port = 5000
        cidr_blocks = ["0.0.0.0/0"]
    }
    ingress {
        from_port = 3000
        protocol = "tcp"
        to_port = 3000
        cidr_blocks = ["0.0.0.0/0"]
    }
    ingress {
        from_port = 5432
        protocol = "tcp"
        to_port = 25432
        cidr_blocks = ["0.0.0.0/0"]
    }
    egress {
        from_port = 0
        protocol = -1
        to_port = 0
        cidr_blocks = ["0.0.0.0/0"]
    }
}

output "react_ip" {
  value = "http://${aws_instance.managed_nodes[2].public_ip}:3000"
}

output "node_public_ip" {
  value = "http://${aws_instance.managed_nodes[1].public_ip}"
}

output "postgre_private_ip" {
  value = "http://${aws_instance.managed_nodes[0].private_ip}"
}
